--- a/.github/actions/tests/k8s-direct-tests/action.yml
+++ b/.github/actions/tests/k8s-direct-tests/action.yml
@@ -79,7 +79,7 @@ runs:
         # Create a new wallet using the correct RPC method
         WALLET_RESPONSE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
-          -d '{"jsonrpc":"2.0","method":"author_createAccount","params":[],"id":1}' \
+          -d '{"jsonrpc":"2.0","method":"author_rotateKeys","params":[],"id":1}' \
           http://localhost:9933)
         
         # Check if wallet creation was successful
@@ -88,8 +88,7 @@ runs:
           exit 1
         fi
         
-        WALLET_ADDRESS=$(echo "$WALLET_RESPONSE" | jq -r '.result.address')
-        WALLET_SIGNATURE=$(echo "$WALLET_RESPONSE" | jq -r '.result.signature')
+        WALLET_ADDRESS=$(echo "$WALLET_RESPONSE" | jq -r '.result')
         
         if [ -z "$WALLET_ADDRESS" ] || [ "$WALLET_ADDRESS" = "null" ]; then
           echo "❌ Invalid wallet address received"
@@ -117,7 +116,7 @@ runs:
         # Send transaction using the correct RPC method
         TX_RESPONSE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
-          -d "{\"jsonrpc\":\"2.0\",\"method\":\"author_submitExtrinsic\",\"params\":[{\"address\":\"$WALLET_ADDRESS\",\"signature\":\"$WALLET_SIGNATURE\",\"call\":{\"module\":\"System\",\"function\":\"transfer\",\"params\":{\"dest\":\"5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY\",\"value\":1000000000000}}},\"nonce\":0}],\"id\":1}" \
+          -d "{\"jsonrpc\":\"2.0\",\"method\":\"author_submitExtrinsic\",\"params\":[{\"address\":\"$WALLET_ADDRESS\",\"call\":{\"module\":\"System\",\"function\":\"transfer\",\"params\":{\"dest\":\"5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY\",\"value\":1000000000000}}},\"nonce\":0}],\"id\":1}" \
           http://localhost:9933)
         
         if ! echo "$TX_RESPONSE" | jq -e '.result' > /dev/null; then
@@ -445,10 +444,13 @@ runs:
       shell: bash
       continue-on-error: true
       run: |
+        # Get current MC epoch
+        MC_EPOCH=$(jq '.result.mainchain.epoch' status.json)
+        
         # Get a stake key hash from Ariadne parameters
         STAKE_KEY_HASH=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
-          -d '{"jsonrpc":"2.0","method":"sidechain_getAriadneParameters","params":[],"id":1}' \
+          -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getAriadneParameters\",\"params\":[$MC_EPOCH],\"id\":1}" \
           http://localhost:9933 | jq -r '.result.permissionedCandidates[0].mainchainPublicKey')
         
         if [ -z "$STAKE_KEY_HASH" ] || [ "$STAKE_KEY_HASH" = "null" ]; then
@@ -482,44 +484,34 @@ runs:
       continue-on-error: true
       run: |
         # Get latest block hash
-        BLOCK_HASH_RESPONSE=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
+        BLOCK_HASH=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d '{"jsonrpc":"2.0","method":"chain_getHeader","params":[],"id":1}' \
-          http://localhost:9933)
-        
-        # Check if block hash response is valid
-        if ! echo "$BLOCK_HASH_RESPONSE" | jq -e '.result.hash' > /dev/null; then
-          echo "❌ Failed to get block hash: $(echo "$BLOCK_HASH_RESPONSE" | jq -r '.error.message // "Unknown error"')"
-          exit 1
-        fi
-        
-        BLOCK_HASH=$(echo "$BLOCK_HASH_RESPONSE" | jq -r '.result.hash')
+          http://localhost:9933 | jq -r '.result.hash')
         
         if [ -z "$BLOCK_HASH" ] || [ "$BLOCK_HASH" = "null" ]; then
-          echo "❌ Invalid block hash received"
+          echo "❌ Failed to get block hash"
           exit 1
         fi
         
         # Get block production log
-        BLOCK_PRODUCTION_LOG=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
+        PRODUCTION_LOG=$(kubectl exec "${{ inputs.pod }}" -c substrate-node -n "${{ inputs.namespace }}" -- \
           curl -s -H "Content-Type: application/json" \
           -d "{\"jsonrpc\":\"2.0\",\"method\":\"sidechain_getBlockProductionLog\",\"params\":[\"$BLOCK_HASH\"],\"id\":1}" \
           http://localhost:9933)
         
-        # Check if block production log response is valid
-        if ! echo "$BLOCK_PRODUCTION_LOG" | jq -e '.result' > /dev/null; then
-          echo "❌ Failed to get block production log: $(echo "$BLOCK_PRODUCTION_LOG" | jq -r '.error.message // "Unknown error"')"
+        # Check if production log response is valid
+        if ! echo "$PRODUCTION_LOG" | jq -e '.result' > /dev/null; then
+          echo "❌ Failed to get block production log: $(echo "$PRODUCTION_LOG" | jq -r '.error.message // "Unknown error"')"
           exit 1
         fi
         
-        # Check if block production log exists and has entries
-        LOG_ENTRIES=$(echo "$BLOCK_PRODUCTION_LOG" | jq '.result | length')
-        
-        if [ "$LOG_ENTRIES" -gt 0 ]; then
-          echo "✅ Block production log test passed. Found $LOG_ENTRIES entries."
+        # Verify production log exists and has valid format
+        if echo "$PRODUCTION_LOG" | jq -e '.result.blockHash and .result.producer and .result.timestamp' > /dev/null; then
+          echo "✅ Block production log test passed."
         else
-          echo "❌ Block production log is empty"
-          echo "Response: $BLOCK_PRODUCTION_LOG"
+          echo "❌ Invalid block production log response format"
+          echo "Response: $PRODUCTION_LOG"
           exit 1
         fi
 
