--- a/toolkit/primitives/sidechain-block-search/Cargo.toml
+++ b/toolkit/primitives/sidechain-block-search/Cargo.toml
@@ -9,7 +9,7 @@ license = "Apache-2.0"
 [dependencies]
 parity-scale-codec = { workspace = true, features = ['std'] }
 scale-info = { workspace = true, features = ['std'] }
-serde = { workspace = true, default-features = true }
+serde = { workspace = true, features = ['std'] }
 
 sp-core = { workspace = true, features = ['std'] }
 sp-runtime = { workspace = true, features = ['std'] }
