--- a/toolkit/cli/commands/Cargo.toml
+++ b/toolkit/cli/commands/Cargo.toml
@@ -13,11 +13,11 @@ ed25519 = { workspace = true, features = ["alloc"]}
 ed25519-zebra  = { workspace = true}
 hex = { workspace = true }
 hex-literal = { workspace = true }
-plutus = { workspace = true, default-features = true }
-plutus-datum-derive = { workspace = true, default-features = true }
+plutus = { workspace = true }
+plutus-datum-derive = { workspace = true }
 secp256k1 = { workspace = true, features = ["std", "global-context"] }
-sidechain-domain = { workspace = true, default-features = true }
-sp-io = { workspace = true, default-features = true }
+sidechain-domain = { workspace = true, features = ["std"] }
+sp-io = { workspace = true, features = ["std"] }
 thiserror = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
