--- a/toolkit/pallets/session-validator-management/rpc/Cargo.toml
+++ b/toolkit/pallets/session-validator-management/rpc/Cargo.toml
@@ -7,5 +7,5 @@ license = "Apache-2.0"
 [dependencies]
 derive-new = { workspace = true }
 jsonrpsee = { workspace = true }
-sidechain-domain = { workspace = true, default-features = true }
-sp-session-validator-management-query = { workspace = true, default-features = true }
+sidechain-domain = { workspace = true, features = ["std"] }
+sp-session-validator-management-query = { workspace = true }
