--- a/toolkit/pallets/sidechain/rpc/Cargo.toml
+++ b/toolkit/pallets/sidechain/rpc/Cargo.toml
@@ -10,8 +10,7 @@ license = "Apache-2.0"
 parity-scale-codec = { workspace = true, features = ['std'] }
 scale-info = { workspace = true, features = ['std'] }
 jsonrpsee = { workspace = true }
-serde = { workspace = true, default-features = true }
-
+serde = { workspace = true }
 sp-core = { workspace = true, features = ['std'] }
 sp-runtime = { workspace = true, features = ['std'] }
 sp-api = { workspace = true, features = ['std'] }
